<resources>
    <string name="app_name">ChatApp</string>
    <!-- Strings related to login -->
    <string name="welcome">Welcome back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create New Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="nickname">Nickname</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_account">Create New Account</string>
    <string name="select_user">Select User</string>
    <string name="add_image">Add image</string>
    <string name="set_profile_image">Set profile image</string>
    <string name="last_seen_at">last seen at </string>
    <string name="online">online</string>
    <string name="add_a_new_user_to_chat_with">Add a new user to chat with</string>
</resources>